# your-social-goblin

./: .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: adapters.py  agent.py  config.py  hydra.py  main.py  patterns.py  seed.py
docs/: architecture.html  demo-script.md  story.md
samples/: README.md  imessage_maya.txt  whatsapp_dev.txt
